Better MultiInstrument organisation and connection-specific configuration.